# personal-ai-employee

./: .env.example  .gitignore  CLAUDE.md  README.md  ecosystem.config.cjs  pyproject.toml
.claude/agents/: business-auditor.md  inbox-processor.md  watcher-monitor.md
.claude/hooks/: ralph-wiggum-stop.sh
.claude/skills/approve-action/: SKILL.md
.claude/skills/check-watcher/: SKILL.md
.claude/skills/create-plan/: SKILL.md
.claude/skills/generate-briefing/: SKILL.md
.claude/skills/odoo-invoice/: SKILL.md
.claude/skills/post-facebook/: SKILL.md
.claude/skills/post-instagram/: SKILL.md
.claude/skills/post-linkedin/: SKILL.md
.claude/skills/post-twitter/: SKILL.md
.claude/skills/process-inbox/: SKILL.md
.claude/skills/ralph-loop/: SKILL.md
.claude/skills/schedule-task/: SKILL.md
.claude/skills/send-email/: SKILL.md
.claude/skills/update-dashboard/: SKILL.md
demo/: 01-init.tape  02-tests.tape  03-cli.tape  04-pm2.tape  VIDEO_SCRIPT.md  browser_walkthrough.py  record.sh
scripts/: demo_setup.sh  init_vault.sh  init_vault_silver.sh  start.sh  status.sh  stop.sh
specs/001-bronze-ai-employee/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bronze-ai-employee/checklists/: requirements.md
specs/001-bronze-ai-employee/contracts/: action-item.schema.yaml  activity-log.schema.yaml  watcher-event.schema.yaml
specs/002-silver-ai-employee/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-silver-ai-employee/checklists/: requirements.md
specs/002-silver-ai-employee/contracts/: approval-service.md  linkedin-service.md  planner-service.md  scheduler-service.md  (+2 more)
specs/003-gold-ai-employee/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/ai_employee/: __init__.py  config.py
templates/: Company_Handbook.md
tests/: __init__.py
tests/contract/: test_meta_api.py  test_odoo_rpc.py  test_twitter_api.py
tests/integration/: __init__.py  test_approval_workflow.py  test_briefing_generation.py  test_cross_domain.py  test_ralph_loop_flow.py  test_skills.py
tests/unit/: __init__.py  test_action_item.py  test_approval_request.py  test_approval_service.py  test_audit_entry.py  test_audit_service.py  test_briefing_model.py  test_briefing_service.py  test_config.py  test_cross_domain.py  test_dashboard_gold_endpoints.py  test_dashboard_server.py  test_email_service.py  test_error_recovery.py  test_filesystem_watcher.py  test_frontmatter.py  test_gmail_mcp.py  test_handbook.py  test_linkedin_post.py  test_linkedin_service.py  test_meta_post.py  test_meta_service.py  test_odoo_models.py  test_odoo_service.py  test_plan.py  test_planner_service.py  test_ralph_stop_hook.py  test_ralph_wiggum.py  test_redaction.py  test_retry.py  test_scheduled_task.py  test_scheduler_service.py  test_service_health.py  test_task_state.py  test_tweet.py  test_twitter_service.py  test_watchdog.py  test_whatsapp_message.py  test_whatsapp_watcher.py
(+77 files in other folders)
