[project]
name = "ai-employee"
version = "0.1.0"
description = "Personal AI Employee - Autonomous Digital FTE using Claude Code and Obsidian"
readme = "README.md"
authors = [
    { name = "Jahanzaib Tayyab", email = "jtayyab204@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
gmail = [
    "google-api-python-client>=2.188.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
]
whatsapp = [
    "playwright>=1.40.0",
]
linkedin = [
    "linkedin-api>=2.0.0",
]
silver = [
    "ai-employee[gmail,whatsapp,linkedin]",
]
dashboard = [
    "fastapi>=0.128.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]

[project.scripts]
ai-employee = "ai_employee.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_employee"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP046"]  # Allow Generic[T] syntax alongside type parameters

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.14.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
